2001-04-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 10.

2001-04-03  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition: Follow changes in
	asahi.com.
	(nnshimbun-asahi-get-headers): Ditto.
	(nnshimbun-retrieve-url): Use `w3m-retrieve' if it is available.

2001-04-02  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-inews-yank-articles): Make it to work with
	multiple articles even if there is a detached minibuffer frame on
	some window managers.

2001-03-21  Thierry Emery <thierry.emery@club-internet.fr>

	* lisp/mm-decode.el (mm-copy-to-buffer): Copy buffer in unibyte
	mode.

2001-03-19  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-kill.el (gnus-execute): Work with the extra headers.
	* lisp/gnus-sum.el (gnus-summary-execute-command): Ditto.

2001-03-13  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Hide again the
	invisible property of encoded binary data parts after checking is
	done.
	(message-find-invisible-regions): New function.
	(message-save-drafts, message-send): Inherit the invisible property
	of encoded binary data parts to make MIME-Edit find the MIME part
	boundaries.

	* lisp/dgnushack.el (dgnushack-compose-package): Tidy up.
	(dgnushack-make-load): Ditto.

2001-03-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-compose-package): New function.
	(dgnushack-make-load): Add autoload for cus-load if it is missing.

	* lisp/Makefile.in (compose-package): Use
	`dgnushack-compose-package'.
	(clean, clever): Remove custom-load.el.

	* Makefile.in (elclean): Remove custom-load.el.

2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-prepare-display): Setup MIME
	entity even if `gnus-show-mime' is nil.

2001-03-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Load gnus-clfns.el after `load-path' is
	adjusted.
